<resources>
    <string name="app_name">Expense App</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="label_edit_expense">Edit Expense</string>
    <string name="label_delete_expense">Delete Expense</string>
    <string name="label_show_expense">Show Expenses</string>
    <string name="label_finish">Finish</string>

    <string name="category_groceries">Groceries</string>
    <string name="category_invoice">Invoice</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_rent">Rent</string>
    <string name="category_trips">Trips</string>
    <string name="category_utilities">Utilities</string>
    <string name="category_other">Other</string>

    <string name="app_name_add">Add Expense</string>
    <string name="label_expense_add"><b>Add An Expense</b></string>
    <string name="label_expense_name">Expense Name</string>
    <string name="label_expense_category">Category</string>
    <string name="label_expense_amount">Amount</string>
    <string name="label_expense_date">Date</string>
    <string name="label_expense_receipt">Receipt</string>

    <string name="label_select_date">Select a date</string>
    <string name="label_select_image">Select an Image</string>

    <string name="label_name_error">Enter the name of the expense here</string>
    <string name="label_amount_error">Enter the amount of the expense here</string>
    <string name="label_date_error">"Enter the date of the expense by tapping the calendar icon"</string>


    <string-array name="array_categories">
        <item>@string/category_groceries</item>
        <item>@string/category_invoice</item>
        <item>@string/category_transportation</item>
        <item>@string/category_shopping</item>
        <item>@string/category_rent</item>
        <item>@string/category_trips</item>
        <item>@string/category_utilities</item>
        <item>@string/category_other</item>
    </string-array>

    <string name="app_name_edit">Edit Expense</string>
    <string name="label_select_expense">Select Expense</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_alert">Pick an Expense</string>

    <string name="app_name_delete">Delete Expense</string>
    <string name="label_button_delete">Delete</string>

    <string name="app_name_show">Show Expenses</string>
    <string name="label_expense_details"><b>Expense Details</b></string>
    <string name="label_name">Name</string>
    <string name="label_category">Category</string>
    <string name="label_amount">Amount</string>
    <string name="label_date">Date</string>
    <string name="label_receipt"><b>Receipt</b></string>
    <string name="label_button_finish">Finish</string>

    <string name="label_show_and_empty">You do not have any expenses!</string>
</resources>
