<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chases.hw2.EditActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_select_expense"
            android:id="@+id/buttonSelect"
            android:layout_gravity="center"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_expense_name"
            android:id="@+id/textViewName"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName"
            android:maxLength="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_expense_category"
            android:id="@+id/textViewCategory"
            android:layout_marginTop="5dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCategory"
            android:entries="@array/array_categories"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_expense_amount"
            android:id="@+id/textViewAmount"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextAmount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_expense_date"
            android:id="@+id/textViewDate"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/editTextDate"
                android:editable="false"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewDate"
                android:src="@drawable/calendar_64" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_expense_receipt"
            android:id="@+id/textViewReceipt"
            android:layout_marginTop="5dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewBrowse"
            android:src="@drawable/browse_64"
            android:maxHeight="64dp"
            android:maxWidth="64dp"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_save"
                android:id="@+id/buttonSave"
                android:textAllCaps="false"
                android:layout_weight="50" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_cancel"
                android:id="@+id/buttonCancel"
                android:textAllCaps="false"
                android:layout_weight="50" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
